--- a/misc/config.json
+++ b/misc/config.json
@@ -1,9 +1,9 @@
 {
-    "bot_token": "<discord bot token here>",
+    "bot_token": "OTM3MzU1Nzg5NTgzMTQyOTMy.Yfaimw.i5wChjsmzdrf6xU7wx6Mp4miSyo",
     "status": {
         "state": "idle",
         "type": "PLAYING",
-        "name": "Chat simulator"
+        "name": "Your mom's pussy"
     },
     "chat": {
         "url": "http://api.brainshop.ai/get",
